--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 		<script src="dist/js/main.min.js"></script>
 	</head>
 	<body ng-controller="MainController" class="">
-		Hello World
-		<!-- <div ui-view></div> -->
+		<div ui-view></div>
 	</body>
 </html>
