header design done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" href="dist/css/components.min.css">
 	    <link rel="stylesheet" href="dist/css/main.css">
 
-		<link href="https://fonts.googleapis.com/css?family=Averia+Sans+Libre" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Signika+Negative|Signika" rel="stylesheet">
 
 		<script src="dist/js/components.min.js"></script>
 		<script src="dist/js/main.min.js"></script>
