list all user design done

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<script src="dist/js/main.min.js"></script>
 	</head>
 	<body ng-controller="MainController" class="">
-		<div ui-view></div>
+		<div id="loading-bar-container"></div>
+		<div id="root" ui-view></div>
 	</body>
 </html>
