--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
 		<link href="https://fonts.googleapis.com/css?family=Signika+Negative|Signika" rel="stylesheet">
 
+		<!-- <script src="node_modules/material-design-lite/material.min.js"></script> -->
+
 		<script src="dist/js/components.min.js"></script>
 		<script src="dist/js/main.min.js"></script>
 	</head>
