--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 		<!-- <script src="node_modules/material-design-lite/material.min.js"></script> -->
 
 		<script src="dist/js/components.min.js"></script>
+		<script type="text/javascript">
+			moment.locale('id');
+		</script>
 		<script src="dist/js/main.min.js"></script>
 	</head>
 	<body ng-controller="MainController" class="">
