--- a/index.html
+++ b/index.html
@@ -18,14 +18,53 @@
 	    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 	    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
-		<link rel="stylesheet" href="dist/css/components.min.css">
+		<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" href="node_modules/ng-dialog/css/ngDialog.min.css">
+		<link rel="stylesheet" href="node_modules/ng-dialog/css/ngDialog-theme-default.min.css">
+		<link rel="stylesheet" href="node_modules/angular-loading-bar/build/loading-bar.min.css">
+		<link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
+		<link rel="stylesheet" href="node_modules/nvd3/build/nv.d3.min.css">
 	    <link rel="stylesheet" href="dist/css/main.css">
 
 		<link href="https://fonts.googleapis.com/css?family=Signika+Negative|Signika" rel="stylesheet">
 
-		<!-- <script src="node_modules/material-design-lite/material.min.js"></script> -->
+		<script src="node_modules/jquery/dist/jquery.min.js"></script>
+		<script src="node_modules/jquery-bridget/jquery-bridget.js"></script>
+		<script src="node_modules/ev-emitter/ev-emitter.js"></script>
+		<script src="node_modules/desandro-matches-selector/matches-selector.js"></script>
+		<script src="node_modules/fizzy-ui-utils/utils.js"></script>
+		<script src="node_modules/get-size/get-size.js"></script>
+		<script src="node_modules/outlayer/item.js"></script>
+		<script src="node_modules/outlayer/outlayer.js"></script>
+		<script src="node_modules/masonry-layout/masonry.js"></script>
+		<script src="node_modules/imagesloaded/imagesloaded.js"></script>
 
-		<script src="dist/js/components.min.js"></script>
+		<script src="node_modules/angular/angular.min.js"></script>
+		<script src="node_modules/angular-animate/angular-animate.min.js"></script>
+		<script src="node_modules/angular-sanitize/angular-sanitize.min.js"></script>
+		<script src="node_modules/angular-material/angular-material.min.js"></script>
+		<script src="node_modules/angular-aria/angular-aria.min.js"></script>
+
+		<script src="node_modules/angular-local-storage/dist/angular-local-storage.min.js"></script>
+		<script src="node_modules/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
+		<script src="node_modules/ui-router-extras/release/ct-ui-router-extras.min.js"></script>
+		<script src="node_modules/angular-permission/dist/angular-permission.min.js"></script>
+		<script src="node_modules/angular-permission/dist/angular-permission-ui.min.js"></script>
+		<script src="node_modules/ng-infinite-scroll/build/ng-infinite-scroll.min.js"></script>
+		<script src="node_modules/angular-loading-bar/build/loading-bar.min.js"></script>
+		<script src="node_modules/angular-masonry/angular-masonry.js"></script>
+		<script src="node_modules/ng-dialog/js/ngDialog.min.js"></script>
+
+		<script src="node_modules/d3/d3.min.js"></script>
+		<script src="node_modules/nvd3/build/nv.d3.min.js"></script>
+		<script src="node_modules/angular-nvd3/dist/angular-nvd3.min.js"></script>
+
+		<script src="node_modules/moment/min/moment.min.js"></script>
+		<script src="node_modules/moment/locale/id.js"></script>
+		<script src="node_modules/lodash/lodash.min.js"></script>
+		<script src="node_modules/async/dist/async.min.js"></script>
+		<script src="node_modules/crypto-js/crypto-js.js"></script>
+
 		<script type="text/javascript">
 			moment.locale('id');
 		</script>
