--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	    <meta charset="utf-8">
 		<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
 	    <meta name="description" content="Gapura Desa Dashboard" />
-		<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" /> -->
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 		<meta http-equiv="cache-control" content="max-age=0" />
 		<meta http-equiv="cache-control" content="no-cache" />
